syntax = "proto3";

option go_package = "common/module/user_service";

package user_service;
import "google/api/annotations.proto";

service UserService{

  rpc AddUser(RegisterUserRequest) returns(RegisterResponse) {
    option (google.api.http) = {
      post: "/users/register"
      body: "newUser"
    };
  }

  rpc Login(LoginUserRequest) returns(LoginResponse) {
    option (google.api.http) = {
      post: "/users/login"
      body: "usernamePass"
    };
  }
}

message LoginUserRequest {
  UsernamePass usernamePass = 1;
}

message RegisterUserRequest {
  NewUser newUser = 1;
}

message UsernamePass {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message RegisterUserResponse {
  string userEmail = 1;
}

message NewUser {
  string username = 1;
  string password = 2;
  string email = 3;
  string phoneNumber = 4;
  string firstName = 5;
  string lastName = 6;
  string gender = 7;
  string dateOfBirth = 8;
}

message RegisterResponse{
  string username = 1;
  string password = 2;
  string email = 3;
  string phoneNumber = 4;
  string firstName = 5;
  string lastName = 6;
  string gender = 7;
  string dateOfBirth = 8;
}
